--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -10,11 +10,11 @@
 \sottotitolo{Dipartimento di Ingegneria Elettrica \\ e delle Tecnologie dell'Informazione} %Nome progetto
 
 \professors{Sergio \textsc{Di Martino} \\
-            Francesco \textsc{Cutugno}} %Nom de l'enseignant
+            Francesco \textsc{Cutugno}} %Nome docenti
 
 \students{Bianca Giada \textsc{Chehade} N86003209 \\
 		Mario \textsc{Liguori} N86003258\\ 
-		Mattia \textsc{Rossi} N86003211} %Nom des élèves
+		Mattia \textsc{Rossi} N86003211} %Nome studenti
 
 %----------- Inizializzazione -----------------
         
