--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -95,7 +95,7 @@
 	\begin{center}
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
 		 \hline
-		 \rowcolor{gray!30}
+		 \rowcolor{PineGreen!70}
 		 \textbf{Nome} & \textbf{Descrizione} \\
 		 \hline
 		  Registrazione & Il sistema deve consentire ad un utente di potersi registrare indicando e-mail e password, oppure utilizzando account di terze parti (Google o Facebook).\\ 
