--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -101,6 +101,64 @@
 		  Registrazione & Il sistema deve consentire ad un utente di potersi registrare indicando e-mail e password, oppure utilizzando account di terze parti (Google o Facebook).\\ 
 		 \hline
 		\end{tabular}
-		\end{center}
+	\end{center}
+	\textbf{Tabella RQF.1}
+
+	\begin{center}
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+		 \hline
+		 \rowcolor{PineGreen!70}
+		 \textbf{Nome} & \textbf{Descrizione} \\
+		 \hline
+		  Accesso & Il sistema deve consentire ad un utente di poter effettuare l'accesso alla piattaforma.\\ 
+		 \hline
+		\end{tabular}
+	\end{center}
+	\textbf{Tabella RQF.2}
+
+	\begin{center}
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+		 \hline
+		 \rowcolor{PineGreen!70}
+		 \textbf{Nome} & \textbf{Descrizione} \\
+		 \hline
+		  Inserimento itinerario &  Il sistema deve consentire a un utente autenticato di inserire nuovi itinerari (sentieri) in piattaforma. Un sentiero è
+		  caratterizzato da un nome, una durata, un livello di difficoltà, un punto di inizio, una descrizione
+		  (opzionale), e un tracciato geografico (opzionale) che lo rappresenta su una mappa. Il tracciato
+		  geografico può essere inseribile manualmente (interagendo con una mappa interattiva) oppure
+		  ramite file in formato standard GPX.\\ 
+		 \hline
+		\end{tabular}
+	\end{center}
+	\textbf{Tabella RQF.3}
+
+	\begin{center}
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+		 \hline
+		 \rowcolor{PineGreen!70}
+		 \textbf{Nome} & \textbf{Descrizione} \\
+		 \hline
+		  Ricerca itinerari &  Il sistema deve consentire a un utente autenticato di effettuare ricerche di itinerari tra quelli presenti in piattaforma, con possibilità di filtrare i risultati
+		  per area geografica, per livello di difficoltà, per durata, e per accessibilità a disabili.\\ 
+		 \hline
+		\end{tabular}
+	\end{center}
+	\textbf{Tabella RQF.4}
+
+	\begin{center}
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+		 \hline
+		 \rowcolor{PineGreen!70}
+		 \textbf{Nome} & \textbf{Descrizione} \\
+		 \hline
+		  Valutare itinerari &  Il sistema deve consentire a un utente autenticato di indicare un punteggio di difficoltà e/o un tempo
+		  di percorrenza diverso da quello indicato dall’utente che ha inserito il sentiero. In questo caso, il
+		  punteggio di difficoltà e il tempo di percorrenza per il sentiero saranno ri-calcolati come la media
+		  delle difficoltà / dei tempi indicati.\\ 
+		 \hline
+		\end{tabular}
+	\end{center}
+	\textbf{Tabella RQF.5}
+
 
 \end{document}
