--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -12,14 +12,14 @@
 \sottotitolo{Dipartimento di Ingegneria Elettrica \\ e delle Tecnologie dell'Informazione} %Nome progetto
 
 \professors{Sergio \textsc{Di Martino} \\
-            Francesco \textsc{Cutugno}} %Nome docenti
+Francesco \textsc{Cutugno}} %Nome docenti
 
 \students{Bianca Giada \textsc{Chehade} N86003209 \\
-		Mario \textsc{Liguori} N86003258\\ 
-		Mattia \textsc{Rossi} N86003211} %Nome studenti
+Mario \textsc{Liguori} N86003258\\ 
+Mattia \textsc{Rossi} N86003211} %Nome studenti
 
 %----------- Inizializzazione -----------------
-        
+
 \marginscreate %Crea margini
 \cover %Crea cover
 \toc %Crea Table of Contents
@@ -57,18 +57,18 @@
 %------- Per inserire un equazione --------------
 
 % \begin{equation} \label{eq: exemple}
-% \rho + \Delta = 42
-% \end{equation}
-
-% L'équation \ref{eq: exemple} est cité ici. 
-
-% ------- Per inserire simboli/variabili ----------------------
-
-% Pour écrire des variables dans le texte, il suffit de mettre le symbole \$ entre le texte souhaité comme : constante $\rho$. 
-
-\section{Descrizione del Progetto}
+	% \rho + \Delta = 42
+	% \end{equation}
+	
+	% L'équation \ref{eq: exemple} est cité ici. 
+	
+	% ------- Per inserire simboli/variabili ----------------------
+	
+	% Pour écrire des variables dans le texte, il suffit de mettre le symbole \$ entre le texte souhaité comme : constante $\rho$. 
+	
+	\section{Descrizione del Progetto}
 	NaTour21 è un sistema complesso e distribuito finalizzato ad offrire un moderno social network multipiattaforma per appassionati di escursioni.\\
-
+	
 	Il sistema consiste in:
 	\begin{itemize}
 		\item un Back-End sicuro, performante e scalabile;
@@ -76,89 +76,325 @@
 		utenti possono fruire delle funzionalità del sistema in modo intuitivo, rapido e piacevole;
 		\item un client mobile attraverso cui gli amministratori possono gestire i contenuti inseriti in piattaforma.\\
 	\end{itemize}
-
+	
 	NaTour21 ha lo scopo di creare una community sicura e affidabile dove condividere la propria passione per l'escursionismo.\\
-
+	
 	In questo scenario, l'utente si configura come protagonista: oltre alla possibilità di inserire itinerari (dettagliati da informazioni), compilation e post personali sulla piattaforma,
 	è lasciato ampio spazio all'individualità personale.\\
-
+	
 	Tutto ciò si concretizza con la possibilità di interagire con gli altri utenti, in modo da poter avere un contatto più diretto con
 	la realtà dell'escursionismo, e di lasciare valutazioni personali su qualunque itinerario si desideri.\\
-
+	
 	Il sistema valuta essenziale la sicurezza degli utenti: questi potranno segnalare informazioni inesatte o contenuti inappropriati, al fine 
 	di rendere la permanenza nella community piacevole.
-
-\section{Documento dei Requisiti Software}
+	
+	\section{Documento dei Requisiti Software}
 	\subsection{Requisiti funzionali}
 	In questa sezione saranno esposti i requisiti funzionali dell'applicazione NaTour21, cioè le funzionalità richieste dai commissionanti.
-
-	\begin{center}
+	
+	\begin{table}[H]
+		\centering
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
-		 \hline
-		 \rowcolor{PineGreen!70}
-		 \textbf{Nome} & \textbf{Descrizione} \\
-		 \hline
-		  Registrazione & Il sistema deve consentire ad un utente di potersi registrare indicando e-mail e password, oppure utilizzando account di terze parti (Google o Facebook).\\ 
-		 \hline
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Registrazione & Il sistema deve consentire ad un utente di potersi registrare indicando e-mail e password, oppure utilizzando account di terze parti (Google o Facebook).\\ 
+			\hline
 		\end{tabular}
-	\end{center}
-	\textbf{Tabella RQF.1}
-
-	\begin{center}
+		\caption{RQF.1}
+		\label{table:1}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
-		 \hline
-		 \rowcolor{PineGreen!70}
-		 \textbf{Nome} & \textbf{Descrizione} \\
-		 \hline
-		  Accesso & Il sistema deve consentire ad un utente di poter effettuare l'accesso alla piattaforma.\\ 
-		 \hline
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Accesso & Il sistema deve consentire ad un utente di poter effettuare l'accesso alla piattaforma.\\ 
+			\hline
 		\end{tabular}
-	\end{center}
-	\textbf{Tabella RQF.2}
+		\caption{RQF.2}
+		\label{table:2}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Visualizzazione itinerari & Il sistema deve consentire a un utente autenticato di visualizzare i
+			dettagli degli itinerari pubblicati e i post ad essi associati. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.3}
+		\label{table:3}
+	\end{table}
 
-	\begin{center}
+	\begin{table}[H]
+		\centering
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
-		 \hline
-		 \rowcolor{PineGreen!70}
-		 \textbf{Nome} & \textbf{Descrizione} \\
-		 \hline
-		  Inserimento itinerario &  Il sistema deve consentire a un utente autenticato di inserire nuovi itinerari (sentieri) in piattaforma. Un sentiero è
-		  caratterizzato da un nome, una durata, un livello di difficoltà, un punto di inizio, una descrizione
-		  (opzionale), e un tracciato geografico (opzionale) che lo rappresenta su una mappa. Il tracciato
-		  geografico può essere inseribile manualmente (interagendo con una mappa interattiva) oppure
-		  ramite file in formato standard GPX.\\ 
-		 \hline
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Inserimento itinerario &  Il sistema deve consentire a un utente autenticato di inserire nuovi itinerari (sentieri) in piattaforma. Un sentiero è
+			caratterizzato da un nome, una durata, un livello di difficoltà, un punto di inizio, delle foto (max 5), una descrizione
+			(opzionale), e un tracciato geografico (opzionale) che lo rappresenta su una mappa. Il tracciato
+			geografico può essere inseribile manualmente (interagendo con una mappa interattiva) oppure
+			tramite file in formato standard GPX.\\ 
+			\hline
 		\end{tabular}
-	\end{center}
-	\textbf{Tabella RQF.3}
-
-	\begin{center}
+		\caption{RQF.4}
+		\label{table:4}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
-		 \hline
-		 \rowcolor{PineGreen!70}
-		 \textbf{Nome} & \textbf{Descrizione} \\
-		 \hline
-		  Ricerca itinerari &  Il sistema deve consentire a un utente autenticato di effettuare ricerche di itinerari tra quelli presenti in piattaforma, con possibilità di filtrare i risultati
-		  per area geografica, per livello di difficoltà, per durata, e per accessibilità a disabili.\\ 
-		 \hline
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Ricerca itinerari &  Il sistema deve consentire a un utente autenticato di effettuare ricerche di itinerari tra quelli presenti in piattaforma, con possibilità di filtrare i risultati
+			per area geografica, per livello di difficoltà, per durata, e per accessibilità a disabili.\\ 
+			\hline
 		\end{tabular}
-	\end{center}
-	\textbf{Tabella RQF.4}
-
-	\begin{center}
+		\caption{RQF.5}
+		\label{table:5}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
 		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
-		 \hline
-		 \rowcolor{PineGreen!70}
-		 \textbf{Nome} & \textbf{Descrizione} \\
-		 \hline
-		  Valutare itinerari &  Il sistema deve consentire a un utente autenticato di indicare un punteggio di difficoltà e/o un tempo
-		  di percorrenza diverso da quello indicato dall’utente che ha inserito il sentiero. In questo caso, il
-		  punteggio di difficoltà e il tempo di percorrenza per il sentiero saranno ri-calcolati come la media
-		  delle difficoltà / dei tempi indicati.\\ 
-		 \hline
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Valutare itinerari & Il sistema deve consentire a un utente autenticato di indicare un punteggio di difficoltà e/o un tempo
+			di percorrenza diverso da quello indicato dall’utente che ha inserito il sentiero. In questo caso, il
+			punteggio di difficoltà e il tempo di percorrenza per il sentiero saranno ri-calcolati come la media
+			delle difficoltà/dei tempi indicati.\\ 
+			\hline
 		\end{tabular}
-	\end{center}
-	\textbf{Tabella RQF.5}
+		\caption{RQF.6}
+		\label{table:6}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Salvataggio itinerario & Il sistema deve consentire a un utente autenticato di salvare gli itinerari
+			nelle proprie compilation personalizzate. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.7}
+		\label{table:7}
+	\end{table}
 
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Indicazioni itinerario & Il sistema deve consentire a un utente autenticato di ottenere indicazioni
+			per un tracciato geografico (se presente). \\
+			\hline
+		\end{tabular}
+		\caption{RQF.8}
+		\label{table:8}
+	\end{table}
 
-\end{document}
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Segnalazione itinerari & Il sistema deve consentire a un utente autenticato di segnalare degli itinerari
+			le quali informazioni potrebbero non essere corrette e/o aggiornate. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.9}
+		\label{table:9}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Elimina itinerario & Il sistema deve consentire a un utente autenticato di eliminare itinerari di cui
+			è l'autore. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.10}
+		\label{table:10}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Visualizzazione post & Il sistema deve consentire a un utente autenticato di visualizzare
+			i dettagli di un post. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.11}
+		\label{table:11}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Inserimento post &  Il sistema deve consentire a un utente autenticato di inserire un post, 
+			caratterizzato da foto (max 5), una descrizione (opzionale) e un itinerario associato. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.12}
+		\label{table:12}
+	\end{table}
+	
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Segnalazione post & Il sistema deve consentire a un utente autenticato di segnalare post con fotografie
+			inappropriate. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.13}
+		\label{table:13}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Elimina post & Il sistema deve consentire a un utente autenticato di eliminare post di cui
+			è l'autore \\
+			\hline
+		\end{tabular}
+		\caption{RQF.14}
+		\label{table:14}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| } 
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Gestione profilo &  Il sistema deve consentire a un utente autenticato di gestire il suo profilo, 
+			egli potrà visitare i contenuti inseriti e modificarli. Inoltre potrà cambiare la foto profilo. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.15}
+		\label{table:15}
+	\end{table}
+	
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Visualizza compilation & Il sistema deve consentire a un utente autenticato di visualizzare i dettagli
+			delle proprie compilation.  \\
+			\hline
+		\end{tabular}
+		\caption{RQF.16}
+		\label{table:16}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Creazione compilation & Il sistema deve consentire a un utente autenticato di creare delle \textit{compilation personalizzate},
+			caratterizzate da un titolo e da una descrizione. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.17}
+		\label{table:17}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Elimina compilation & Il sistema deve consentire a un utente autenticato di eliminare le proprie
+			compilation personalizzate \\
+			\hline
+		\end{tabular}
+		\caption{RQF.18}
+		\label{table:18}
+	\end{table}
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Elimina itinerario da compilation & Il sistema deve consentire a un utente autenticato di eliminare gli itinerari
+			che compongono le proprie compilation personalizzate \\
+			\hline
+		\end{tabular}
+		\caption{RQF.19}
+		\label{table:19}
+	\end{table}
+
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{ |p{5cm}|p{10.3cm}| }
+			\hline
+			\rowcolor{PineGreen!70}
+			\textbf{Nome} & \textbf{Descrizione} \\
+			\hline
+			Conversazioni private & Il sistema deve permettere all'utente autenticato lo scambio di informazioni con altri utenti.
+			È possibile avviare la conversazione a partire dai contenuti pubblicati. \\
+			\hline
+		\end{tabular}
+		\caption{RQF.20}
+		\label{table:20}
+	\end{table}
+
+\end{document}	
