Presentazione idea progettuale

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -1,4 +1,4 @@
-ææ\documentclass{natourDoc}
+\documentclass{natourDoc}
 \usepackage{lipsum}
 \usepackage{tabularx}
 \usepackage[table]{xcolor}
@@ -94,6 +94,20 @@ Mattia \textsc{Rossi} N86003211} %Nome studenti
 	
 	Il sistema valuta essenziale la sicurezza degli utenti: questi potranno segnalare informazioni inesatte o contenuti inappropriati, al fine 
 	di rendere la permanenza nella community piacevole.
+
+	\section{Presentazione dell'idea progettuale}
+
+	L'applicazione "NaTour21" nasce in seguito all'esigenza di uno spazio virtuale dove poter condividere la passione per l'escursionismo.\\
+	Creare una community di escursionisti, esperti o meno, ha lo scopo di rendere le esperienze individuali degli utenti più sicure e informate, 
+	oltre a promuovere la condivisione di contenuti personali.\\\\
+	NaTour21 mette a disposizione degli utenti registrati diverse funzionalità.\\
+	Il lato prettamente informativo consente di ricercare - nonchè inserire in piattaforma - diversi itinerari, e tutte le informazioni relative ad essi.
+	Ciò comprende la possibilità di ottenere indicazioni stradali per l'itinerario, e, per garantire un'accuratezza maggiore delle informazioni, di lasciare 
+	un feedback personale per ciascuno degli itinerari.\\\\
+	Ci sono, però, ulteriori funzionalità che coinvolgono direttamente l'utente: tra queste la condivisione di post, la creazione di compilation personalizzate e 
+	la visualizzazione di una homepage con post riguardanti gli itinerari consigliati.\\
+	Particolare attenzione è riservata alla sicurezza degli utenti, i quali possono segnalare contenuti inappropriati o informazioni inesatte.
+	
 	
 	\section{Documento dei Requisiti Software}
 	\subsection{Requisiti funzionali}
@@ -397,7 +411,7 @@ Mattia \textsc{Rossi} N86003211} %Nome studenti
 			\textbf{Nome} & \textbf{Descrizione} \\
 			\hline
 			Conversazioni private & Il sistema deve permettere all'utente autenticato lo scambio di informazioni con altri utenti.
-			È possibile avviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario. \\
+			È possibile ææavviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario. \\
 			\hline
 		\end{tabular}
 		\caption{RF20}
