--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -476,7 +476,7 @@ Mattia \textsc{Rossi} N86003211} %Nome studenti
 	\subsection{Tabelle di Cockburn dei casi d'uso}
 	Sono presentate in questa sezione le tabelle di Cockburn relative a due casi d'uso significativi dell'UCD.
 
-	%TODO
+	%%TODO
 
 	\subsubsection{Inserisce un itinerario}
 
