Modificato frontespizio documentazione

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -19,7 +19,7 @@
 
 %----------- Informazioni --------------------
 
-\titolo{NaTour21} %Titolo.pdf
+\titolo{Specifica, progettazione, implementazione e validazione del Sistema Informativo\\ \textit{NaTour21}} %Titolo.pdf
 \sottotitolo{Dipartimento di Ingegneria Elettrica \\ e delle Tecnologie dell'Informazione} %Nome progetto
 
 \professors{Sergio \textsc{Di Martino} \\
