Aggiornamento documento di usabilità

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -120,15 +120,22 @@ Mattia \textsc{Rossi} N86003211} %Nome studenti
 	Particolare attenzione è riservata alla sicurezza degli utenti, i quali possono segnalare contenuti inappropriati o informazioni inesatte.
 	
 	\section{Individuazione del target degli utenti}
-	NaTour21 si configura come community in cui chiunque può intraprendere la passione per l'escursionismo o condividerla.\\\\
-	Cionostante, si individua come target degli utenti la popolazione italiana di escursionisti, caratterizzata da un 
+	NaTour21 si configura come community in cui chiunque può intraprendere la passione per l'escursionismo e condividerla.\\\\
+	Ciononostante, è stato possibile individuare un target di utenti ben definito grazie ai dati 
+	statistici\footnote{Fonte: \href{http://dati.istat.it/Index.aspx?DataSetCode=DCCV_ESC_CAPI}{sito ufficiale Istat}.} raccolti 
+	nell'anno 2020 dall'ISTAT, Istituto Nazionale di Statistica.\\\\
+	In seguito all'analisi delle informazioni statistiche sull'escursionismo italiano è stato individuato come target utenti la popolazione, caratterizzata da un 
 	numero di circa pari entità di uomini e di donne, nella fascia di età \texttt{35-64}. La maggior parte della 
 	platea considerata risulta essere appartenente alla condizione lavorativa di \textit{dirigente, quadro o impiegato}.\\\\
-	L'Istat, Istituto Nazionale di Statistica, ha conteggiato nell'anno 2020\footnote{Fonte: \href{http://dati.istat.it/Index.aspx?DataSetCode=DCCV_ESC_CAPI}{sito ufficiale Istat}.}
-	circa \texttt{41194} escursioni giornaliere,
+	\begin{figure}[!htbp]
+		\centering
+		\includegraphics[width=12cm, page=1]{./logos/undraw_statistic_chart_38b6.png}
+	\end{figure}
+	\FloatBarrier
+	L'Istat ha inoltre conteggiato nell'anno 2020 circa \texttt{41194} escursioni giornaliere,
 	di cui il \texttt{42.7\%} situate temporalmente nel terzo trimestre dell'anno. Da questa informazione si deduce che il periodo
 	preferito per attività escursionistiche sia quello dei mesi estivi.\\\\
-	Il motivo prevalente per queste escursioni risulta essere \textit{piacere personale, svago e tempo libero}, con un numero
+	Il motivo prevalente per queste escursioni risulta essere stato \textit{piacere personale, svago e tempo libero}, con un numero
 	di escursioni così orientate pari a \texttt{23223}: questo dato risulta particolarmente significativo, pari a un ordine
 	di grandezza in più rispetto agli altri motivi registrati. È importante anche notare quanto il numero di escursioni in paesi 
 	esteri sia di gran lunga minore rispetto a quelle nelle regioni italiane.\\\\
